--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  background-color: #FAF8FFFF;
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  font-family: "JetBrains Mono", sans-serif;
+}
