--- a/src/app/pages/main-calculator/components/networks-form/networks-form.component.scss
+++ b/src/app/pages/main-calculator/components/networks-form/networks-form.component.scss
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: end;
 
+    max-height: 84vh;
+    overflow-y: scroll;
     padding: 2rem 1rem 2rem 1rem;
 
     background-color: themed(surface);
