--- a/src/app/pages/main-calculator/main-calculator.component.scss
+++ b/src/app/pages/main-calculator/main-calculator.component.scss
@@ -41,7 +41,7 @@
       z-index: 1;
 
       padding: 0 1rem;
-      overflow: scroll;
+      max-height: 84vh;
 
       #form {
         grid-area: form;
